# cpp-starter

./: .gitignore  CMakeLists.txt
scripts/: build  clean
